fix overflow

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,10 @@ ul {
 }
 
 @media screen and (max-width: 600px) {
+    html {
+        margin: 0;
+        padding: 0;
+    }
     body {
         max-width: 100%;
         overflow-x: hidden;
